<resources>
    <string name="app_name">Citatum</string>

    <string name="default_text">default</string>

    <string name="home_app_text">CITATUM</string>
    <string name="tags_text">Метки:</string>
    <string name="home_bookmark_name">Bookmark image</string>
    <string name="tags_name">Tags text</string>

    <string name="category_settings_text">Настройки</string>
    <string name="category_pencil_text">Создать</string>
    <string name="category_hub_text">Главная</string>
    <string name="category_repository_text">Репозиторий</string>
    <string name="category_tags_text">Метки</string>
    <string name="category_bookmarks_text">Закладки</string>
    <string name="category_basket_text">Корзина</string>
    <string name="category_feedback_text">Оставить отзыв</string>

    <string name="welcome_morning_text">Доброе утро!</string>
    <string name="welcome_day_text">Добрый день!</string>
    <string name="welcome_evening_text">Добрый вечер!</string>
    <string name="welcome_night_text">Доброй ночи!</string>

    <string name="add_button">добавить</string>
    <string name="create_button">создать</string>

    <string name="write_text_request">Введите текст…</string>

    <string name="imagine">imagine</string>

    <string name="current_date">Среда, 1 января, 1970, 00:00</string>

    <string name="description_of_edit_text">Write text here</string>

    <string name="repository_page">Репозиторий</string>
    <string name="return_button">перейти</string>

    <string name="division_line">Line for division</string>
    <string name="quote_create_title_hint">Название</string>
    <string name="quote_create_author_hint">Автор</string>
    <string name="quote_create_text_hint">Введите текст...</string>
    <string name="quote_create_page_number_text_hint">Номер страницы:</string>
    <string name="quote_create_page_number_hint">10</string>

    <string name="tags_page">Метки</string>
</resources>