<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/return_button" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fontFamily="@font/gothampro_black"
                android:hint="@string/quote_create_title_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/middle_text_size" />

            <!-- ImageView в качестве разделительной полосы -->
            <ImageView
                android:id="@+id/division_rectangle_first"
                android:layout_width="@dimen/navigation_rectangle_width"
                android:layout_height="3dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/division_line"
                android:src="@drawable/division_rectangle"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fontFamily="@font/gothampro_medium"
                android:hint="@string/quote_create_author_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/middle_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/gothampro"
                    android:text="@string/tags_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/lite_text_size" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:fontFamily="@font/gothampro_light"
                    android:gravity="left"
                    android:hint="@string/quote_create_text_hint"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/lite_text_size" />

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/gothampro"
                    android:text="@string/quote_create_page_number_text_hint"
                    android:textColor="@color/black"
                    android:textSize="@dimen/lite_text_size" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:hint="@string/quote_create_page_number_hint"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>