<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/category_settings_text"
            android:textColor="@color/light_blue"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/settings_icon" />

        <ImageView
            android:id="@+id/division_rectangle_first"
            android:layout_width="250dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/division_rectangle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pencil_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/category_pencil_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/pencil_icon" />

        <ImageView
            android:id="@+id/division_rectangle_second"
            android:layout_width="250dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/division_rectangle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/hub_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/category_hub_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/hub_icon" />

        <TextView
            android:id="@+id/repository_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/category_repository_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/repository_icon" />

        <TextView
            android:id="@+id/bookmark_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/category_bookmarks_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/bookmark_icon" />

        <TextView
            android:id="@+id/basket_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/category_basket_text"
            android:textColor="@color/light_red"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/basket_icon" />

        <ImageView
            android:id="@+id/division_rectangle_third"
            android:layout_width="250dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/division_rectangle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/feedback_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/category_feedback_text"
            android:textColor="@color/light_blue"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/feedback_icon" />

    </LinearLayout>
</ScrollView>