<?xml version="1.0" encoding="utf-8"?><!-- Основной контейнер, содержащий элементы интерфейса -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/central_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- TextView для отображения названия страницы -->
    <TextView
        android:id="@+id/page_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gothampro_black"
        android:text="@string/default_text"
        android:textColor="@color/black"
        android:textSize="@dimen/page_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/red_bookmark"
        app:layout_constraintEnd_toStartOf="@+id/red_bookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Изображение красной закладки -->
    <ImageView
        android:id="@+id/red_bookmark"
        android:layout_width="60dp"
        android:layout_height="138dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/home_bookmark_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_bookmark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gothampro_medium"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="@dimen/lite_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_bookmark" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/default_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/light_red"
        android:text="@string/return_button"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>