<?xml version="1.0" encoding="utf-8"?>
<!-- Основной контейнер, содержащий элементы интерфейса -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/central_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- TextView для отображения названия страницы -->
    <TextView
        android:id="@+id/page_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gothampro_black"
        android:text="@string/default_text"
        android:textColor="@color/black"
        android:textSize="@dimen/page_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/red_bookmark"
        app:layout_constraintEnd_toStartOf="@+id/red_bookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Изображение красной закладки -->
    <ImageView
        android:id="@+id/red_bookmark"
        android:layout_width="60dp"
        android:layout_height="138dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/home_bookmark_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_bookmark" />

    <!-- Отображает текст, переданный в текущий фрагмент -->
    <TextView
        android:id="@+id/transmission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/tags_name"
        android:fontFamily="@font/gothampro"
        android:text="@string/default_text"
        android:textColor="@color/black"
        android:textSize="@dimen/lite_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_bookmark" />

    <!-- Кнопка, которая вызвращает в вызвавший фрагмент -->
    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/light_red"
        android:fontFamily="@font/gothampro_medium"
        android:text="@string/default_text"
        android:textColor="@color/black"
        android:textSize="@dimen/lite_text_size"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transmission_text" />

    <!-- Поле ввода -->
    <EditText
        android:id="@+id/quote_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/gothampro_light"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_button" />

</androidx.constraintlayout.widget.ConstraintLayout>