<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Основной контейнер, содержащий основные элементы интерфейса -->
    <RelativeLayout
        android:id="@+id/central_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <!-- Основной контейнер, содержащий элементы интерфейса -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/central_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TextView для отображения названия страницы -->
            <TextView
                android:id="@+id/page_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothampro_black"
                android:gravity="center"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="@dimen/page_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/red_bookmark"
                app:layout_constraintEnd_toStartOf="@+id/red_bookmark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Изображение красной закладки -->
            <ImageView
                android:id="@+id/red_bookmark"
                android:layout_width="60dp"
                android:layout_height="138dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="@string/home_bookmark_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/home_bookmarks" />

            <!-- Отображает текст, переданный в текущую активность -->
            <TextView
                android:id="@+id/transmission_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/tags_name"
                android:fontFamily="@font/gothampro"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="@dimen/middle_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/page_name" />

            <!-- Кнопка, которая возвращает в изначальную активность -->
            <Button
                android:id="@+id/return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/default_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transmission_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <!-- Левый выдвижной контейнер, содержащий элементы бокового меню -->
    <RelativeLayout
        android:id="@+id/left_relative"
        android:layout_width="@dimen/left_relative_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="none"
        android:clickable="true"
        android:focusable="true" />

</androidx.drawerlayout.widget.DrawerLayout>